- refactor infinite scroll logic - fix selfie component z-index bug

--- a/src/modules/content/content.component.scss
+++ b/src/modules/content/content.component.scss
@@ -14,6 +14,7 @@ section {
   display: flex;
   flex-direction: column;
   width: 25%;
+  z-index: $selfieImage;
 }
 
 .right-section .right-section-inner {
